--- a/frontend/src/app/board/register-task/register-task.component.html
+++ b/frontend/src/app/board/register-task/register-task.component.html
@@ -19,7 +19,7 @@
                     <input [(ngModel)]="taskData.name" matInput placeholder="Name" required />
                 </mat-form-field>
                 <mat-form-field>
-                    <input [(ngModel)]="taskData.email" matInput placeholder="Description" required />
+                    <input [(ngModel)]="taskData.description" matInput placeholder="Description" required />
                 </mat-form-field>
 
             </div>
