Add Board List Methods

--- a/frontend/src/app/home/header/header.component.css
+++ b/frontend/src/app/home/header/header.component.css
@@ -1,6 +1,7 @@
 .headerSpacer {
   flex: 1 1 auto;
 }
+
 a {
   text-decoration: none;
   color: #ffffff;
@@ -8,4 +9,5 @@ a {
 
 .bgHeader {
   background-color: #ffa500;
+  font-size: medium;
 }
